--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "scripts": {
     "test": "jest"
   },
-  "testEnvironment": "jsdom"
+  "testEnvironment": "jsdom",
+  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/shzd1vQq)\r # Favorite Song Showcase",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
